base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
spec:
  rules:
    - host: dnd-manager.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: svelte-frontend
                port:
                  number: 3000
          - path: /api/graphql
            pathType: Prefix
            backend:
              service:
                name: backend
                port:
                  number: 4000
